Bug fixes on Cart and Order API's